Complete authentication security controls (#89)
Closes #12
